--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,13 @@
   }
 }
 
-.wmde-markdown ul {
-  list-style-type: disc;
-  padding-left: 25px;
+
+.wmde-markdown{
   color: white;
 }
+
+
+
 
 @layer base {
   * {
@@ -82,3 +84,13 @@
     @apply gradient text-transparent bg-clip-text;
   }
 }
+
+/* body {
+  margin: 0;
+  padding: 0;
+  background-color: #0a0a0a;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+} */
+/* //this is keeping background as black if removed then backgrund will be bluish  */
+
